# employee-handbook-ai-assistant

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
app/: ingestion.py  logs.py  main.py  search_agent.py  search_tools.py
app/eval/: eval_prompt.py  eval_runner.py  eval_schema.py
